...
        super.viewWillAppear()
        setupButtons()
    }

    private func setup() {
        appLabel.stringValue = NSLocalizedString("Permissions Tab", comment: "Title for Permissions screen")
        onboardingTypeLabel.stringValue = "Your data doesn't leave your device 🔐"

        reminderHeaderLabel.stringValue = NSLocalizedString("Reminders Access Title",comment: "Title for Reminders Access Label")
        reminderDetailLabel.stringValue = "Set reminders in the timezone of the location of your choice. Your reminders are stored in the default Reminders app."

        calendarHeaderLabel.stringValue = NSLocalizedString("Calendar Access Title",comment: "Title for Calendar access label")
        calendarDetailLabel.stringValue = "Calendar Detail".localized()
...
